# rscloud

./: .gitignore  Cargo.toml  LICENSE  README  payload.json
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs  main.rs
src/v1/: cloud.rs  datastore.rs  manager.rs  mod.rs  plan.rs  registry.rs  resource.rs
src/v1/aws/: mod.rs
src/v1/aws/api/: deployment.rs  integration.rs  mod.rs  resource.rs  restapi.rs
src/v1/aws/ec2/: mod.rs  subnet.rs  vpc.rs
src/v1/aws/iam/: attach_group_policy.rs  attach_role_policy.rs  attach_user_policy.rs  group.rs  mod.rs  policy.rs  role.rs  user.rs
src/v1/aws/lambda/: function.rs  mod.rs  sample_echo1.rs
src/v1/aws/s3/: bucket.rs  object.rs
src/v1/aws/scheduler/: schedule.rs
src/v1/aws/sfn/: mod.rs  schema.rs  state_machine.rs
src/v1/solutions/: lambda.rs
src/v1/storage/: file.rs
