#[workspace]
#members = ["crates/sample_lambda"]

[package]
name = "rscloud"
version = "0.1.0"
edition = "2021"
default-run = "rscloud"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "sample_echo1"
path = "src/v1/aws/lambda/sample_echo1.rs"

[dependencies]
aws-smithy-types-convert = "0.60.8"
ipnet = "2.9.0"
strum = "0.26.2"
strum_macros = "0.26.2"
daggy = { version = "0.8.0", features = ["stable_dag"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
anyhow = "1.0.82"
petgraph = "0.6.4"
aws-config = { version = "1.5.2", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.33.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.32.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.37.0", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.52.0", features = ["behavior-version-latest"] }
aws-sdk-scheduler = { version = "1.33.0", features = [
    "behavior-version-latest",
] }
aws-sdk-cloudwatch = { version = "1.37.0", features = [
    "behavior-version-latest",
] }
aws-sdk-lambda = { version = "1.33.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.33.0" }
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.58"
bincode = "1.3.3"
lazy_static = "1.4.0"
lambda_runtime = "0.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
